# reclie

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  build.zig  pyproject.toml  setup.py
.example/: http.py
.github/: README.md  install-zig.sh
.github/workflows/: build.yml
example/: bench_remote.py  main.py  show_responses.py
reclie/: __init__.py  _client.py  main.py  pyproject.toml
reclie/core/: __init__.py  http.py
reclie/utils/: __init__.py  _exceptions.py  _ext.py  _response.py
src/: py_module.c  root.zig
src/core/: dispatch.zig  http.zig  pool.zig  transport.zig
test/: benchmark.py  smoke_bridge.py  smoke_http.py  smoke_tls.py
zig-out/lib/: _reclie.lib
